<resources>
    <string name="app_name">iicportal</string>
    <string name="welcomeText">Welcome to IICPortal</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="emailLabel">Email</string>
    <string name="emailHint">Please enter email</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordHint">Please enter password</string>
    <string name="confirmPasswordLabel">Confirm Password</string>
    <string name="confirmPasswordHint">Please confirm password</string>
    <string name="register">Register</string>
    <string name="fullNameLabel">Full Name</string>
    <string name="fullNameHint">Please enter full name</string>
    <string name="phoneNumberHint">Please enter phone number</string>
    <string name="phoneNumberLabel">Phone No.</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_description">Enter the email that is registered to your account</string>
    <string name="submit">Submit</string>
    <string name="ecanteen">E-Canteen</string>
    <string name="categories">Categories</string>
    <string name="menu">Menu</string>
    <string name="food_name">Food Name</string>
    <string name="price">Price</string>
    <string name="food_description">Food Description</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="cart_empty">Cart is empty.
        Please add items to cart.</string>
    <string name="orderTotal">Order Total:</string>
    <string name="checkout">Checkout</string>
    <string name="items">Items</string>
    <string name="payment_method">Payment Method:</string>
    <string name="credit_card">Credit Card</string>
    <string name="order_option">Order Option:</string>
    <string name="dine_in">Dine-in</string>
    <string name="order">Order</string>
    <string name="takeaway_fee">Takeaway Fee:</string>
    <string name="total">Total:</string>
    <string name="touch_n_go">TNG eWallet</string>
    <string name="cash">Cash</string>
    <string name="orderHistory">Order History</string>
    <string name="order_history_empty">You have no previous orders.</string>
    <string name="orderID">Order ID:</string>
    <string name="orderDateTime">Order Datetime:</string>
    <string name="sent_to_kitchen">Sent To Kitchen</string>
    <string name="ready_for_pickup">Ready for Pickup</string>
    <string name="completed">Completed</string>
    <string name="status">Status</string>
    <string name="orderStatusTitle">Order Status</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_description">Reach out to us with any questions or feedback! We\'re all ears and ready to assist.\n\nDrop us a line using the form below, and we\'ll get back to you promptly.</string>
    <string name="first_name_hint_label"><b>First name <font color="#FF0000">*</font></b></string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint_label"><b>Last name <font color="#FF0000">*</font></b></string>
    <string name="last_name_hint">Last name</string>
    <string name="email_hint_label"><b>E-mail <font color="#FF0000">*</font></b></string>
    <string name="email_hint">youremail@gmail.com</string>
    <string name="phone_hint_label"><b>Phone</b></string>
    <string name="phone_hint">e.g. 0120000000</string>
    <string name="message_hint_label"><b>Message <font color="#FF0000">*</font></b></string>
    <string name="message_hint">Your message</string>

    // Newly added stuff
    <string name="facility">Facilities</string>
    <string name="facility_name">Facility Name</string>
    <string name="booking_time">Booking Time</string>
    <string name="booking_date">Booking Date</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="services">Services</string>
    <string name="status_reminders">Status/Reminders</string>
    <string name="facilities">Facilities</string>
    <string name="status_empty">There are no currently no status updates or reminders for you.</string>
    <string name="bookingHistory">Booking History</string>
    <string name="booking_history_empty">You have no previous bookings.</string>
	<string name="order_details">Order Details</string>
	<string name="ordered_at">Ordered At</string>
	<string name="order_id_title">Order ID</string>
    <string name="collect_by_title">Collect By</string>
    <string name="payment_method_title">Payment</string>
    <string name="prices_title">Prices (RM)</string>
    <string name="subtotal_title">Subtotal</string>
    <string name="takeaway_fees_title">Takeaway Fees</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="search">Search</string>
    <string name="userRoleHint">User Role</string>
    <string name="userRoleLabel">Role</string>
    <string name="edit_user">Edit User</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_user">Add User</string>
    <string name="edit_ecanteen">E-Canteen (Edit Mode)</string>
    <string name="stop_edit_ecanteen">Exit E-Canteen edit mode</string>
    <string name="add_category">Add category</string>
    <string name="edit_category">Edit category</string>
    <string name="categoryHint">Please enter a new category name</string>
    <string name="delete_category">Delete category</string>
    <string name="new_category">New Category</string>
    <string name="newCategoryHint">Please enter new category name</string>
    <string name="food_item">Food Item</string>
    <string name="change_image">Change Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="add_image">Add Image</string>
    <string name="live_chat">Live Chat</string>
    <string name="enter_message">Enter message</string>
    <string name="live_chat_empty_text">Send a message to start chatting.</string>
	<string name="orders">Orders</string>
    <string name="add_facility">Add Facility</string>
    <string name="edit_facility">Facility (Edit Mode)</string>
    <string name="delete_facility">Delete Facility</string>
    <string name="facilityHint">Please enter a new facility name</string>
    <string name="new_facility">New Facility</string>
    <string name="newFacilityHint">Please enter new facility name</string>
    <string name="stop_edit_facility">Exit Facility edit mode</string>
    <string name="total_users">Total Users</string>
    <string name="tasks_to_complete">Tasks to Complete</string>
    <string name="tasks_empty_text">You have no pending tasks.</string>
    <string name="chats">Chats</string>
    <string name="messages">Messages</string>
    <string name="total_orders">Total Orders</string>
    <string name="confirm">Confirm</string>


    <string-array name="timeslot">
        <item>8:00AM - 9:00AM</item>
        <item>9:00AM - 10:00AM</item>
        <item>10:00AM - 11:00AM</item>
        <item>11:00AM - 12:00PM</item>
        <item>12:00PM - 1:00PM</item>
        <item>1:00PM - 2:00PM</item>
        <item>2:00PM - 3:00PM</item>
        <item>3:00PM - 4:00PM</item>
        <item>4:00PM - 5:00PM</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_details">Message Details</string>
    <string name="phone">Phone</string>
    <string name="message">Message</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_description">Reach out to us with any feedback! We\'re all ears and we\'ll strive to improve your experience with this application.</string>
    <string name="feedback_details">Feedback Details</string>
	<string name="edit_food_item">Edit Food Item</string>
	<string name="add_food_item">Add Food Item</string>
    <string name="edit_facility_title">Edit Facility</string>
</resources>