<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:input="http://schemas.android.com/apk/res-auto"
	xmlns:button="http://schemas.android.com/tools">

	<RelativeLayout
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="10dp"
		android:layout_marginTop="10dp">

		<ImageView
			android:id="@+id/backBtnIcon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginEnd="10dp"
			android:src="@drawable/baseline_arrow_back_24"/>

		<TextView
			android:id="@+id/headerText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_toEndOf="@id/backBtnIcon"
			android:text="@string/add_user"
			android:textColor="@color/black"
			android:textSize="24sp"
			android:textStyle="bold"/>

	</RelativeLayout>

	<com.google.android.material.imageview.ShapeableImageView
		android:id="@+id/userImage"
		android:layout_width="125dp"
		android:layout_height="125dp"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/header"
		android:layout_marginTop="10dp"
		android:padding="10dp"
		android:src="@drawable/baseline_account_circle_24"
		app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
		android:scaleType="centerCrop" />

	<RelativeLayout
		android:id="@+id/userDetailsWidget"
		android:layout_below="@id/userImage"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginVertical="10dp"
		android:paddingHorizontal="20dp">

		<RelativeLayout
			android:id="@+id/fullNameWidgetContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/fullNameHint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/fullNameLabel"
				android:textColor="@color/black"
				android:textSize="16sp"
				android:textStyle="bold" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/fullNameLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/fullNameHint"
				android:layout_gravity="center_vertical"
				android:hint="@string/fullNameHint"
				android:theme="@style/EditText.Default"
				input:startIconDrawable="@drawable/baseline_person_24"
				input:errorEnabled="true"
				input:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
				input:hintEnabled="false">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/fullName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/transparent"
					android:inputType="text"
					android:paddingVertical="15dp"
					android:textSize="16sp"
					android:textColor="@color/black"/>

			</com.google.android.material.textfield.TextInputLayout>

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/emailWidgetContainer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/fullNameWidgetContainer">

			<TextView
				android:id="@+id/emailHint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/emailLabel"
				android:textColor="@color/black"
				android:textSize="16sp"
				android:textStyle="bold" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/emailLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/emailHint"
				android:layout_gravity="center_vertical"
				android:hint="@string/emailHint"
				android:theme="@style/EditText.Default"
				input:startIconDrawable="@drawable/baseline_email_24"
				input:errorEnabled="true"
				input:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
				input:hintEnabled="false">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/transparent"
					android:inputType="textEmailAddress"
					android:paddingVertical="15dp"
					android:textSize="16sp"
					android:textColor="@color/black"/>

			</com.google.android.material.textfield.TextInputLayout>

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/passwordWidgetContainer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/emailWidgetContainer">

			<TextView
				android:id="@+id/passwordHint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/passwordLabel"
				android:textColor="@color/black"
				android:textSize="16sp"
				android:textStyle="bold" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/passwordLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/passwordHint"
				android:layout_gravity="center_vertical"
				android:hint="@string/passwordHint"
				android:theme="@style/EditText.Default"
				input:startIconDrawable="@drawable/baseline_lock_24"
				input:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
				input:errorEnabled="true"
				input:hintEnabled="false">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/transparent"
					android:inputType="textPassword"
					android:paddingVertical="15dp"
					android:textSize="16sp"
					android:textColor="@color/black"/>

			</com.google.android.material.textfield.TextInputLayout>

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/phoneWidgetContainer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/passwordWidgetContainer">

			<TextView
				android:id="@+id/phoneHint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/phoneNumberLabel"
				android:textColor="@color/black"
				android:textSize="16sp"
				android:textStyle="bold" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/phoneLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/phoneHint"
				android:layout_gravity="center_vertical"
				android:hint="@string/phoneNumberHint"
				android:theme="@style/EditText.Default"
				input:startIconDrawable="@drawable/baseline_phone_24"
				input:errorEnabled="true"
				input:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
				input:hintEnabled="false">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/phone"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/transparent"
					android:inputType="phone"
					android:paddingVertical="15dp"
					android:textSize="16sp"
					android:textColor="@color/black"/>

			</com.google.android.material.textfield.TextInputLayout>

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/roleWidgetContainer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/phoneWidgetContainer">

			<TextView
				android:id="@+id/roleHint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/userRoleLabel"
				android:textColor="@color/black"
				android:textSize="16sp"
				android:textStyle="bold" />

			<Spinner
				android:id="@+id/role"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/roleHint"
				android:layout_gravity="center_vertical"
				android:background="@color/transparent"
				android:entries="@array/userRole"
				android:paddingVertical="15dp"
				android:textSize="16sp"
				android:textColor="@color/black"/>

		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/roleWidgetContainer"
			android:layout_marginTop="20dp"
			android:layout_centerHorizontal="true"
			android:gravity="center"
			android:weightSum="2"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/cancelBtn"
				android:theme="@style/Button.Transparent"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:textColor="@color/colorPrimary"
				android:gravity="center"
				android:text="@string/cancel"
				button:cornerRadius="20dp"
				button:elevation="20dp"/>

			<Button
				android:id="@+id/saveBtn"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:text="@string/save"
				android:theme="@style/Button.Primary"
				button:cornerRadius="40dp"
				button:elevation="20dp" />

		</LinearLayout>

	</RelativeLayout>

</RelativeLayout>